--- a/bot.example.conf
+++ b/bot.example.conf
@@ -86,5 +86,5 @@ Log_File = navn.log
 ##############################################################
 [Modules]
 LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
-ModuleDir = modules/ ;This will load modules in any directory in the binary runtime, do not use absolute paths
+ModuleDir = ../modules/ ;This will load modules in any directory in the binary runtime, do not use absolute paths
 Modules = m_system, modulehandler, help, m_ping, m_join, testmod, searcher, m_dns, about_me, ctcp, encyclopedia, weather, world_clock, navn, channel_logger, m_terminal_input
