Rewrote m_ping to make a ping timeout timer, added a PingTimeoutTime config variable to the config, make sure we check if user input is not null in m_terminal_input

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -33,6 +33,7 @@ PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
 Owner = n00b ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. (default: Navn)
 Socket Timeout = 5 ;timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
+PingTimeoutTime = 120 ; Time before the bot initiates a Ping Timeout (default: 120 sec)
 
 ##############################################################
 #							     #
