--- a/bot.example.conf
+++ b/bot.example.conf
@@ -86,6 +86,12 @@ Log_File = navn.log
 #	     This is where the oper info goes   	     #
 ##############################################################
 [Modules]
-LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
-ModuleDir = ../modules/ ;This will load modules in any directory in the binary runtime, do not use absolute paths
+# For the Channel Logger module (comment out or remove if you don't want to log)
+LogChannel = #Test
+# The URL to use when looking up weather for !weather, standard is google but you can change it.
+# !!THIS IS NOT RECOMMENDED YOU CHANGE IT AS PARSING THE RETURN CAN CAUSE A CRASH!!
+WeatherURL = http://www.google.com/ig/api?weather=%l
+# This will load modules in any directory in the binary runtime, do not use absolute paths
+ModuleDir = ../modules/
+# Modules to load :P
 Modules = m_system, modulehandler, help, m_ping, m_join, testmod, searcher, m_dns, about_me, ctcp, encyclopedia, weather, world_clock, navn, channel_logger, m_terminal_input
