Reformatted the config file, added all the copyright crap

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -14,12 +14,18 @@
 #      !!READ THE WHOLE CONFIG BEFORE STARTING THE BOT!!     #
 ##############################################################
 [Connect]
-Server = irc.Flux-Net.net ;The server, Server to connect to (default: irc.flux-net.net)
-Channel = #Test, #Navn ;The main channel, joins this channel on startup (default: #Test)
-Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
-#Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
-Ident = Navn ;The bots Ident shown in the GECOS (Default: Navn)
-Port = 6667 ;The port used to connect to the server. (Default: 6667)
+# The server, Server to connect to (default: irc.flux-net.net)
+Server = irc.Flux-Net.net
+# The main channel, joins this channel on startup (default: #Test)
+Channel = #Test, #Navn
+# The bots Nickname, this is the nickname of the bot (default: Navn)
+Nick = Navn
+# The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
+#Realname = Navn Bot
+# The bots Ident shown in the GECOS (Default: Navn)
+Ident = Navn
+# The port used to connect to the server. (Default: 6667)
+Port = 6667
 
 ##############################################################
 #							     #
@@ -29,11 +35,16 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 ##############################################################
 
 [Bot]
-PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
-Owner = n00b ;Bot Owner, used to show who manages the bot (default: Derp)
-Password = Test ;This is the owner password, it is used in changing owners, and much more. (default: Navn)
-Socket Timeout = 5 ;timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
-PingTimeoutTime = 120 ; Time before the bot initiates a Ping Timeout (default: 120 sec)
+# defines the pid file to use (Default: navn.pid)
+PID File = navn.pid
+# Bot Owner, used to show who manages the bot (default: Derp)
+Owner = n00b
+# This is the owner password, it is used in changing owners, and much more. (default: Navn)
+Password = Test
+# timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
+Socket Timeout = 5
+# Time before the bot initiates a Ping Timeout (default: 120 sec)
+PingTimeoutTime = 120
 
 ##############################################################
 #							     #
@@ -76,8 +87,10 @@ Log_File = navn.log
 #	     This is where the oper info goes   	     #
 ##############################################################
 [Oper]
-#Oper_Username = ;Operator account username (comment out or remove if you dont have one)
-#Oper_Password = ;Operator Password (comment out or remove if you dont have one)
+# Operator account username (comment out or remove if you dont have one)
+#Oper_Username = 
+# Operator Password (comment out or remove if you dont have one)
+#Oper_Password = 
 
 ##############################################################
 #							     #
