Hopefully added log rotations, changed LOTS of core stuff around for this, Added new config variable "Log Age", added TextFile::DirectoryListing, logs are now prefixed with "yearmonthday-timestamp" any file without the timestamp will not be deleted (i think)

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -78,7 +78,10 @@ Identify on connect = true
 /* Log File location, this is where the logging will be stored.
    It is recommended that this not be empty */
 [Log]
-Log_File = navn.log 
+# Log file name to use
+Log_File = navn.log
+# Log age before the bot deletes the file
+Log Age = 2
 
 ##############################################################
 #							     #
