Quick fix to add server password support into navn which adds config variable Connection:Password, renamed Flux::base_string to flux::sstr to make typing a std::string inside the flux namespace easier, fixed quite a few spelling errors inside the changelog

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -5,7 +5,7 @@
 # 							     #
 # File Type: ini					     #
 # There are a few ways of doing comments in this config      #
-# 1. # (like python) You can't use # with midline comments   #
+# 1. # (like python) You can't use # with mid-line comments  #
 # 2. ; (like mIRC)					     #
 # 3. /* */ (C++ multi-line)				     #
 # 							     #
@@ -26,6 +26,8 @@ Nick = Navn
 Ident = Navn
 # The port used to connect to the server. (Default: 6667)
 Port = 6667
+# A server password (if any) for connection (default: none)
+#Password = I heart passwords!
 
 ##############################################################
 #							     #
@@ -53,7 +55,7 @@ PingTimeoutTime = 120
 #	     These are the services options.    	     #
 ##############################################################
 /* This is where you can have navn identify to services.
-   Most people will use nickserv (and earlier versions of navn didnt support this)
+   Most people will use nickserv (and earlier versions of navn didn't support this)
    but for those who have weird versions of services, this has been added
    to allow for navn to identify to say QuakeNet's Q bot.
    Most of how this works is rather straight forward.
